--- a/solar-project/views/partials/head.ejs
+++ b/solar-project/views/partials/head.ejs
@@ -1,8 +1,8 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>Solar project</title>
 <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
+<script type="text/javascript" src="https://cdn.plot.ly/plotly-1.52.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
 
 <styles>
 
