--- a/solar-project/views/pages/index.ejs
+++ b/solar-project/views/pages/index.ejs
@@ -11,6 +11,19 @@
       <h1>This is great</h1>
       <p>Welcome to templating using EJS</p>
     </div>
+
+
+
+    <div>
+      <label for="stations">Choose a station:</label>
+      <select name="stations" id="index-stations-select">
+        <option value="DEFAULT"></option>
+      </select>
+    </div> 
+
+    <div id='index-station-display'>
+      
+    </div>
   </main>
 
   <%- include('../js/main.ejs'); %>
