add div for map

--- a/solar-project/views/pages/index.ejs
+++ b/solar-project/views/pages/index.ejs
@@ -12,7 +12,9 @@
       <p>Welcome to templating using EJS</p>
     </div>
 
-
+    <div id="map">
+      
+    </div>
 
     <div>
       <label for="stations">Choose a station:</label>
